  or $wgResourceModules is no longer supported.
  Use the 'class' or 'factory' option of the array format instead.
* The parameter $lang of the functions generateTOC and tocList in Linker and
  DummyLinker must be in type Language when present. Other types are
  deprecated since 1.33.
* The static properties mw.Api.errors and mw.Api.warnings, deprecated in 1.29,
  have been removed.
* The UploadVerification hook, deprecated in 1.28, has been removed. Instead,
  use the UploadVerifyFile hook.
* UploadBase:: and UploadFromChunks::stashFileGetKey() and stashSession(),
  deprecated in 1.28, have been removed. Instead, please use the getFileKey()
  method on the response from doStashFile().
* …

=== Deprecations in 1.34 ===
* The MWNamespace class is deprecated. Use NamespaceInfo.
* ExtensionRegistry->load() is deprecated, as it breaks dependency checking.
  Instead, use ->queue().
* User::isBlocked() is deprecated since it does not tell you if the user is
  blocked from editing a particular page. Use User::getBlock() or
  PermissionManager::isBlockedFrom() or PermissionManager::userCan() instead.
* User::isLocallyBlockedProxy and User::inDnsBlacklist are deprecated and moved
  to the BlockManager as private helper methods.
* User::isDnsBlacklisted is deprecated. Use BlockManager::isDnsBlacklisted
  instead.
* The Config argument to ChangesListSpecialPage::checkStructuredFilterUiEnabled
  is deprecated. Pass only the User argument.
* WatchedItem::getUser is deprecated. Use getUserIdentity.
* Passing a Title as the first parameter to the getTimestampById method of
  RevisionStore is deprecated. Omit it, passing only the remaining parameters.
* Title::getPreviousRevisionId and Title::getNextRevisionId are deprecated. Use
  RevisionLookup::getPreviousRevision and RevisionLookup::getNextRevision.
* The Title parameter to RevisionLookup::getPreviousRevision and
  RevisionLookup::getNextRevision is deprecated and should be omitted.