@@ -309,6 +309,8 @@ because of Phabricator reports.
   deprecated since 1.33.
 * The static properties mw.Api.errors and mw.Api.warnings, deprecated in 1.29,
   have been removed.
+* ParserOption::getSpeculativeRevIdCallback(), deprecated in 1.28, has been
+  removed.
 * The UploadVerification hook, deprecated in 1.28, has been removed. Instead,
   use the UploadVerifyFile hook.
 * UploadBase:: and UploadFromChunks::stashFileGetKey() and stashSession(),
